--- a/05-Estratificacion.Rmd
+++ b/05-Estratificacion.Rmd
@@ -6,14 +6,19 @@ Para hacer cumplir la definición de los límites en el método de estratificaci
 
 $$\left[Q_{1} - 1.5e^{-4MC} IQR; \hspace{0.5cm}  Q_{3} + 1.5e^{-4MC} IQR \right] \text{para } MC \geq 0$$
 $$\left[Q_{1} - 1.5e^{-3MC} IQR; \hspace{0.5cm}  Q_{3} + 1.5e^{-3MC} IQR \right] \text{para } MC < 0$$
-donde:    
-$\circ \:𝑄_{1}$ 𝑦 $𝑄_{3}$: hacen referencia al primer y tercer cuartil, respectivamente; la diferencia entre estos dos valores da como resultado el valor de espacio intercuartil ($𝐼𝑄𝑅$), y   
-$\circ \:𝑀𝐶 (𝑚𝑒𝑑𝑐𝑜𝑢𝑝𝑙𝑒)$: cuantifica el grado de asimetría de una muestra univariable ${𝑥_1,𝑥_2,… ,𝑥_𝑛}$.      
+donde:   
+$\circ \:𝑄_{1}$ 𝑦 $𝑄_{3}$: hacen referencia al primer y tercer cuartil, respectivamente; la diferencia entre estos dos valores da como resultado el valor de espacio intercuartil ($𝐼𝑄𝑅$), y    
+$\circ \:𝑀𝐶 (𝑚𝑒𝑑𝑐𝑜𝑢𝑝𝑙𝑒)$: cuantifica el grado de asimetría de una muestra univariable ${𝑥_1,𝑥_2,… ,𝑥_𝑛}$.     
+
+Se identifican los valores atípicos para cada conjunto de datos. 
+
+- Se calculan los estadísticos de la columna del índice de marginación para cada conjunto de datos $DP2_{i}$ correspondientes al año y se asigna el resultado a una nueva variable denominada $outliers_i$.    
 
 ```{r}
 assign(paste0("outliers_2020"), boxplot.stats(DP2_2020[,24]))
 ```
 
+Se crea un data.frame que contiene el número de valores atípicos, su rango y el límite inferior para cada conjunto de datos.
 
 ```{r, echo = FALSE}
 #Límites para el cálculo de estratificación a nivel localidad, 2020
@@ -30,11 +35,11 @@ tabla %>%
  gt() %>%
    tab_header(title = "Límites para el cálculo de estratificación a nivel colonia, 2020") %>%
     fmt_number(columns = c(2:3), decimals = 3) %>%
-    tab_options(heading.title.font.size = 12, 
-                heading.subtitle.font.size = 10,
-                table.font.names = 'montserrat',
+    tab_options(heading.title.font.size = 14, 
+                heading.subtitle.font.size = 12,
+                table.font.names = 'Century Gothic',
                 table.align = "center",
-                table.font.size = 8,
+                table.font.size = 10,
                 data_row.padding = px(1)) %>%
     tab_style(style = list(cell_text(align = "left",
                                       weight = 'bold')),
@@ -51,6 +56,12 @@ tabla %>%
 ```
 
 Se identifican los casos extremos en el índice de marginación y se aplica el método de caja propuesto por `Hubert y Vandervieren`, concluyendo los límites con los que se debe trabajar.      
+
+Se añade una nueva columna `IM_out`. Esta columna se calcula usando `if_else`, de la siguiente manera:   
+
+- Si el valor de IM es mayor o igual al límite inferior de los valores no considerados outliers `(get(paste0("outliers_", i))$stats[1])`, entonces `IM_out` toma el valor de `IM`.   
+- Si el valor de IM es menor que el límite inferior, entonces `IM_out` toma el valor del límite inferior, eliminando así los outliers.      
+
 
 ```{r}
 ## Se crea un índice ficticio, en la que se quitan los outliers   
@@ -105,9 +116,10 @@ El requisito de precisión, generalmente se establece cuando el coeficiente de v
 
 `alloc` lista que especifica el esquema de asignación. La lista debe contener 3 números para los 3 exponentes q1, q2 y q3 en el esquema de asignación general (ver paquete de `stratification`). El valor predeterminado es la asignación de **Neyman** (q1 = q3 = 0.5 y q2 = 0)   
 
+A continuación, se realiza un análisis de estratificación sobre los diferentes años, usando la función `strata.cumrootf()`, almacenando los resultados de errores estándar, medias y varianzas en matrices que luego se guardan en listas.   
 
-```{r, results=FALSE, warning=FALSE}
-iteraciones <- 100
+```{r, results=FALSE, warning=FALSE, eval = FALSE}
+iteraciones <- 1000
 start.time <- Sys.time()
 i <- 1
 sd <- matrix(NA, nrow = (iteraciones), ncol = 3)
@@ -128,8 +140,14 @@ time.taken <- round(end.time - start.time, 2)
 time.taken
 ```
 
+```{r, echo = FALSE}
+#saveRDS(sd, file = paste0(here::here(), "/Output/sd.RDS"))
+sd <- readRDS(file = paste0(here::here(), "/Output/sd.RDS"))
+```
 
 #### Número óptimo de clases {-}
+
+Se toma cada matriz resultante de errores estándar de la lista `stderr`, y luego selecciona la fila que tiene el coeficiente de variación (`CV`) más bajo. Estos resultados se almacenan en la lista `min.strata`, la cual contendrá los data.frames correspondientes a las filas con el menor `CV `para cada uno de los tres conjuntos de datos en `stderr`.  
 
 ```{r}
 min.strata <- sd %>%
@@ -149,11 +167,11 @@ tabla %>%
     fmt_integer(columns = names(tabla)[2]) %>%
      fmt_number(columns = names(tabla)[3:4],
                 decimals = 2) %>%
-       tab_options(heading.title.font.size = 12, 
-                   heading.subtitle.font.size = 10,
-                   table.font.names = 'montserrat',
+       tab_options(heading.title.font.size = 14, 
+                   heading.subtitle.font.size = 12,
+                   table.font.names = 'Century Gothic',
                    table.align = "center",
-                   table.font.size = 8) %>%
+                   table.font.size = 10) %>%
         tab_style(style = list(cell_text(align = "left",
                                           weight = 'bold')),
                    locations = list(cells_title(groups = c("title")))) %>%
@@ -181,24 +199,33 @@ p <- sd %>%
                        vjust = -1,
                         size = 6,
                          color = "red",
-                          family = "montserrat") +
+                          family = "Century Gothic") +
              geom_hline(data = min.strata, aes(yintercept = CV), color = "red") +
               theme_minimal() + 
-               theme(title = element_text(family = "montserrat"), 
-                      plot.title = element_text(size = 22, family = "montserrat"),
-                          plot.subtitle = element_text(size = 20, family = "montserrat"),
-                          axis.text = element_text(size = 14, family = "montserrat"),
-                          axis.title = element_text(size = 18, family = "montserrat")) + 
+               theme(title = element_text(family = "Century Gothic"), 
+                      plot.title = element_text(size = 22, family = "Century Gothic"),
+                          plot.subtitle = element_text(size = 20, family = "Century Gothic"),
+                          axis.text = element_text(size = 14, family = "Century Gothic"),
+                          axis.title = element_text(size = 18, family = "Century Gothic")) + 
                      scale_y_continuous(labels = scales::number_format(accuracy = 0.01)) +
                  labs(title = "Coeficiente de variación óptimo",
                        subtitle = '2020',
                         y = "CV", 
                          x = "iteraciones") 
-p
 ```
 
 
-Se toman en cuenta el número de clases que salen del los resultados del método iterativo. 
+<a href="https://raw.githubusercontent.com/dvillasanao/IMC_2020/main/img/iteraciones.png" data-lightbox="image-1" data-title="iteraciones">
+```{r, echo = FALSE, fig.width=12, fig.height=12, out.width='100%'}
+knitr::include_graphics(paste0(here::here(), "/img/iteraciones.png"))
+```
+</a>
+
+Se toman en cuenta el número de clases que salen del los resultados del método iterativo. Utilizando la función `strata.cumrootf()` de la paquetería `stratification` con parámetros específicos y el número de clases (`nclass`) obtenido de `min.strata`.       
+- `CV = 0.05`: Establece el coeficiente de variación.   
+- `Ls = 5`: Establece el número de estratos.   
+- `alloc = c(0.5, 0, 0.5)`: Define la asignación para la estratificación.    
+- `nclass = min.strata[,1]`: Establece el número de clases utilizando el primer valor de la fila con el menor CV en `min.strata`.  
 
 ```{r}
 strata.DP2 <- strata.cumrootf(DP2_2020[,25], 
@@ -227,6 +254,11 @@ levels(DP2_2020[,25]) = c("Muy alto", "Alto", "Medio", "Bajo", "Muy bajo")
 
 ### Límites de los estratos {-}
 
+Se crea un data frame llamado `limites` que contiene los límites de ciertos intervalos para el año `2020`. Cada columna contiene una combinación de:   
+- El valor mínimo del índice de marginación (`IM:`) para el año correspondiente.  
+- Los valores de los límites de los estratos (`bh`) calculados previamente.  
+- El valor máximo del índice de marginación (`IM_`) para el año correspondiente.  
+
 ```{r}
 limites <- data.frame("2020" = c(min(DP2_2020$IM_2020), strata.DP2$bh, max(DP2_2020$IM_2020)))
 ```
@@ -250,12 +282,12 @@ tabla %>%
  rename("AÑO" = "ANIO") %>%
   gt(rowname_col = c("AÑO")) %>%
    tab_header(title = "Límite de los estratos") %>%
-    tab_options(heading.title.font.size = 12, 
+    tab_options(heading.title.font.size = 14, 
                 heading.align = "center",
-                heading.subtitle.font.size = 10,
+                heading.subtitle.font.size = 12,
                 table.align = "center",
-                table.font.names = 'montserrat',
-                table.font.size = 8) %>%
+                table.font.names = 'Century Gothic',
+                table.font.size = 10) %>%
      tab_style(style = list(cell_text(align = "center",
                                        weight = 'bold')),
                 locations = list(cells_title(groups = c("title")))) %>%
