--- a/08-Resumen.Rmd
+++ b/08-Resumen.Rmd
@@ -14,11 +14,11 @@ tabla <- p %>%
 tabla %>% 
  gt() %>%
   tab_header(title = "Nacional: Población y unidades geograficas según el índice de marginación, 2020") %>%
-   tab_options(heading.title.font.size = 12, 
-               heading.subtitle.font.size = 10,
-               table.font.names = 'montserrat',
+   tab_options(heading.title.font.size = 14, 
+               heading.subtitle.font.size = 12,
+               table.font.names = 'Century Gothic',
                table.align = "center",
-               table.font.size = 8,
+               table.font.size = 10,
                data_row.padding = px(1)) %>%
      tab_style(style = list(cell_text(align = "left",
                                       weight = 'bold')),
@@ -41,7 +41,7 @@ tabla %>%
 ## Mapa a nivel colonia {-}
 
 
-```{r, echo=FALSE, out.width='100%', warning=FALSE, message=FALSE}
+```{r, echo=FALSE, out.width='100%', warning=FALSE, message=FALSE, eval = FALSE}
 p <- readRDS(file = paste0(here::here(),"/Output/Mapa.rds"))
 p
 ```
@@ -50,7 +50,7 @@ p
 ## Comparación en el tiempo {-}
 
 <div style="height:500px;">
-```{r, echo=FALSE, out.width='100%'}
+```{r, echo=FALSE, out.width='100%', eval = FALSE}
 readRDS(paste0(here::here(), "/Output/Mapas_2010-2020.rds"))
 ```
 </div> 
