--- a/03-Correlaciones.Rmd
+++ b/03-Correlaciones.Rmd
@@ -4,9 +4,9 @@ La función `corrplot` en `R` es utilizada para crear matrices de correlación v
 
 La matriz de correlación es una tabla que muestra las correlaciones entre pares de variables. En análisis de datos, la correlación se utiliza para medir la relación entre dos variables. Puede ser útil para comprender cómo se relacionan diferentes variables entre sí y cómo afectan a otras variables en un conjunto de datos.   
  
-```{r, fig.align='center', fig.width=12, fig.height=12, out.width='100%'}
+```{r, fig.align='center', fig.width=12, fig.height=12, out.width='100%', eval = FALSE}
 col2 <- colorRampPalette(c("#67001F", "#B2182B", "#D6604D", "#F4A582", "#FDDBC7", "#FFFFFF", "#D1E5F0", "#92C5DE","#4393C3", "#2166AC", "#053061"))
-par(mfrow = c(1,1), family = "montserrat", mar = c(0.5, 0, 0, 0), cex.main = 3, col.main = "#053061")
+par(mfrow = c(1,1), family = "Century Gothic", mar = c(0.5, 0, 0, 0), cex.main = 3, col.main = "#053061")
 #Análisis de correlaciones
 corrplot(cor(tabla_2020[,13:23]) ,
           title = "2020",
@@ -23,6 +23,13 @@ corrplot(cor(tabla_2020[,13:23]) ,
                      addCoef.col = "white", # Add coefficient of correlatio
                       mar = c(10, 0, 2.5,0))
 ```
+
+<a href="https://raw.githubusercontent.com/dvillasanao/IMC_2020/main/img/correlaciones_2020.png" data-lightbox="image-1" data-title="correlaciones">
+```{r, echo = FALSE, fig.width=12, fig.height=12, out.width='100%'}
+require(knitr)
+knitr::include_graphics(paste0(here::here(), "/img/correlaciones_2020.png"))
+```
+</a>
 
 
 
