--- a/07-Validacion.Rmd
+++ b/07-Validacion.Rmd
@@ -1,8 +1,10 @@
 # Validación de datos  {.unlisted .unnumbered}
 
-## Variables sort {-}
+## Orden de entrada de las variables  {-}
 
-**Se crea un data.frame de acuerdo al orden de importancia de las variables**
+**Se crea un data.frame de acuerdo al orden de importancia de las variables**   
+
+Dependiendo del proceso, el `DP2` adoptará diferentes valores. Por lo tanto, es importante que el método de como resultado un orden de entrada único de los indicadores parciales.     
 
 ```{r}
 Variables_sort <- ind_2020$variables_sort
@@ -16,25 +18,26 @@ tabla <- Variables_sort %>%
 tabla %>%
  gt() %>%
   tab_header(title = "Variables sort") %>%
-   tab_options(heading.title.font.size = 12, 
+   tab_options(heading.title.font.size = 14, 
                heading.align = "center",
-               heading.subtitle.font.size = 10,
+               heading.subtitle.font.size = 12,
                table.align = "center",
-               table.font.names = 'montserrat',
-               table.font.size = 8,
+               table.font.names = 'Century Gothic',
+               table.font.size = 10,
                data_row.padding = px(1)) %>%
     tab_style(style = list(cell_text(align = "center",
                                       weight = 'bold')),
                locations = list(cells_title(groups = c("title")))) %>%
-      as_raw_html() 
+      cols_width(everything() ~ px(80)) %>%
+       as_raw_html() 
 ```
 
 
 ## Coeficiente de correlación {-}  
 
-El coeficiente de correlación es una medida que se utiliza para jerarquizar a los indicadores simples de acuerdo con el grado de correlación absoluta con respecto al indicador sintético resultante, es decir, ayuda a visualizar que variable tiene un mejor o peor apego con el fenómeno.     
+El coeficiente de correlación es una medida que se utiliza para jerarquizar a los indicadores simples de acuerdo con el grado de correlación absoluta con respecto al indicador sintético resultante, es decir, ayuda a visualizar que variable tiene un mejor o peor apego con el fenómeno.       
 
-**Se crea un data.frame de acuerdo a la correlación de cada variable con el indicador sintético (DP2)**
+**Se crea un data.frame de acuerdo a la correlación de cada variable con el indicador sintético (DP2)**   
 
 ```{r}
 cor.coeff <- ind_2020$cor.coeff
@@ -50,25 +53,26 @@ tabla <- cor.coeff %>%
 tabla %>%
   gt() %>%
    tab_header(title = "Correlation Coefficient") %>%
-    tab_options(heading.title.font.size = 12, 
+    tab_options(heading.title.font.size = 14, 
                 heading.align = "center",
-                heading.subtitle.font.size = 10,
+                heading.subtitle.font.size = 12,
                 table.align = "center",
-                table.font.names = 'montserrat',
-                table.font.size = 8,
+                table.font.names = 'Century Gothic',
+                table.font.size = 10,
                 data_row.padding = px(1)) %>%
       tab_style(style = list(cell_text(align = "center",
                                        weight = 'bold')),
                 locations = list(cells_title(groups = c("title")))) %>%
        fmt_number(columns = c(2), decimals = 3) %>% 
-       cols_label(`Ind_2020` = md("**Ind_2020**"), 
-                  `cor.coeff` = md("**cor.coeff**")) %>%
-        as_raw_html()                          
+        cols_label(`Ind_2020` = md("**Ind_2020**"), 
+                   `cor.coeff` = md("**cor.coeff**")) %>%
+          cols_width(everything() ~ px(80)) %>%
+           as_raw_html()           
 ```
 
 ## Factor de corrector  {-}
 
-El factor corrector, como se mencionó anteriormente, indica la proporción de información con la que contribuye el indicador simple al nuevo índice sintético, además, evita la duplicidad e incorpora información útil que retiene cada indicador simple.     
+El factor corrector, como se mencionó anteriormente, indica la proporción de información con la que contribuye el indicador simple al nuevo índice sintético, además, evita la duplicidad e incorpora información útil que retiene cada indicador simple.        
 
 **Se crea un data.frame de acuerdo al factor corrector de cada indicador parcial**
 
@@ -87,20 +91,21 @@ tabla <- correction_factors %>%
 tabla %>%
   gt() %>%
    tab_header(title = "Correction Factors") %>%
-    tab_options(heading.title.font.size = 12, 
+    tab_options(heading.title.font.size = 14, 
                 heading.align = "center",
-                heading.subtitle.font.size = 10,
+                heading.subtitle.font.size = 12,
                 table.align = "center",
-                table.font.names = 'montserrat',
-                table.font.size = 8,
+                table.font.names = 'Century Gothic',
+                table.font.size = 10,
                 data_row.padding = px(1)) %>%
       tab_style(style = list(cell_text(align = "center",
                                        weight = 'bold')),
                 locations = list(cells_title(groups = c("title")))) %>%
        fmt_number(columns = c(2), decimals = 3) %>% 
-       cols_label(`Ind_2020` = md("**Ind_2020**"), 
-                  `Correction Factor` = md("**Correction Factor**")) %>%
-        as_raw_html()                         
+        cols_label(`Ind_2020` = md("**Ind_2020**"), 
+                   `Correction Factor` = md("**Correction Factor**")) %>%                      
+         cols_width(everything() ~ px(80)) %>%
+          as_raw_html()        
 ```
 
 
@@ -118,7 +123,6 @@ $\circ\:k_{j}$: El número de diferentes valores que toma $x_{i}$ en el conjunto
 
 Esta medida está comprendida entre $[0, 2]$. Si una variable toma el mismo valor para todos los estados, el `CD` vale cero, indicando que posee un valor nulo de poder discriminante. Por el contrario, si una variable toma el valor teórico de máximo poder discriminante, el discriminante de la variable es total.   
 
-
 **Se crea un data.frame de acuerdo al Coeficiente de discriminación (CD) de cada indicador parcial**
 
 ```{r}
@@ -135,20 +139,21 @@ tabla <- discrimination_coefficient %>%
 tabla %>%
  gt() %>%
   tab_header(title = "Discrimination Coefficient") %>%
-   tab_options(heading.title.font.size = 12, 
+   tab_options(heading.title.font.size = 14, 
                heading.align = "center",
-               heading.subtitle.font.size = 10,
+               heading.subtitle.font.size = 12,
                table.align = "center",
-               table.font.names = 'montserrat',
-               table.font.size = 8,
+               table.font.names = 'Century Gothic',
+               table.font.size = 10,
                data_row.padding = px(1)) %>%
       tab_style(style = list(cell_text(align = "center",
                                        weight = 'bold')),
                 locations = list(cells_title(groups = c("title")))) %>%
        fmt_number(columns = c(2), decimals = 3) %>% 
-       cols_label(`Ind_2020` = md("**Ind_2020**"),
-                  `Discrimination Coefficient` = md("**Discrimination Coefficient**")) %>%
-        as_raw_html() 
+        cols_label(`Ind_2020` = md("**Ind_2020**"),
+                   `Discrimination Coefficient` = md("**Discrimination Coefficient**")) %>%
+         cols_width(everything() ~ px(80)) %>%
+          as_raw_html()         
 ```
 
 ## “Cantidad de Información Global de Ivanovic Pena Relativa Individual” {-}
@@ -169,12 +174,12 @@ tabla <- alpha %>%
 tabla %>%
   gt() %>%
    tab_header(title = md("Cantidad de Información Global de Ivanovic Pena Relativa Individual")) %>%
-    tab_options(heading.title.font.size = 11, 
+    tab_options(heading.title.font.size = 14, 
                 heading.align = "center",
-                heading.subtitle.font.size = 10,
+                heading.subtitle.font.size = 12,
                 table.align = "center",
-                table.font.names = 'montserrat',
-                table.font.size = 8,
+                table.font.names = 'Century Gothic',
+                table.font.size = 10,
                 data_row.padding = px(1)) %>%
       tab_style(style = list(cell_text(align = "center",
                                        weight = 'bold')),
@@ -182,6 +187,7 @@ tabla %>%
        fmt_number(columns = c(2), decimals = 3) %>% 
        cols_label(`Ind_2020` = md("**Ind_2020**"),
                   `alpha` = md("**alpha**")) %>%
-        as_raw_html() 
+         cols_width(everything() ~ px(80)) %>%
+          as_raw_html()        
 ```
 
