--- a/packages.bib
+++ b/packages.bib
@@ -3,16 +3,26 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 0.29},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  year = {2023},
+  note = {R package version 0.36},
+  url = {https://github.com/rstudio/bookdown},
+}
+
+@Manual{R-Cairo,
+  title = {Cairo: R Graphics Device using Cairo Graphics Library for Creating
+High-Quality Bitmap (PNG, JPEG, TIFF), Vector (PDF, SVG,
+PostScript) and Display (X11 and Win32) Output},
+  author = {Simon Urbanek and Jeffrey Horner},
+  year = {2023},
+  note = {R package version 1.6-1},
+  url = {http://www.rforge.net/Cairo/},
 }
 
 @Manual{R-corrplot,
@@ -25,74 +35,83 @@
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2022},
-  note = {R package version 1.0.9},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.3},
+  url = {https://dplyr.tidyverse.org},
 }
 
 @Manual{R-extrafont,
   title = {extrafont: Tools for Using Fonts},
   author = {Winston Chang},
-  year = {2022},
-  note = {R package version 0.18},
+  year = {2023},
+  note = {R package version 0.19},
   url = {https://github.com/wch/extrafont},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2022},
-  note = {R package version 0.5.2},
-  url = {https://CRAN.R-project.org/package=forcats},
+  year = {2023},
+  note = {R package version 1.0.0},
+  url = {https://forcats.tidyverse.org/},
 }
 
 @Manual{R-geojsonio,
   title = {geojsonio: Convert Data from and to GeoJSON or TopoJSON},
-  author = {Scott Chamberlain and Andy Teucher},
-  year = {2021},
-  note = {R package version 0.9.4},
-  url = {https://CRAN.R-project.org/package=geojsonio},
+  author = {Scott Chamberlain and Andy Teucher and Michael Mahoney},
+  year = {2023},
+  note = {R package version 0.11.3},
+  url = {https://github.com/ropensci/geojsonio},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2023},
-  note = {R package version 3.4.1},
-  url = {https://CRAN.R-project.org/package=ggplot2},
+  note = {R package version 3.4.3},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Manual{R-ggpubr,
   title = {ggpubr: ggplot2 Based Publication Ready Plots},
   author = {Alboukadel Kassambara},
-  year = {2020},
-  note = {R package version 0.4.0},
+  year = {2023},
+  note = {R package version 0.6.0},
   url = {https://rpkgs.datanovia.com/ggpubr/},
 }
 
 @Manual{R-ggridges,
   title = {ggridges: Ridgeline Plots in ggplot2},
   author = {Claus O. Wilke},
-  year = {2021},
-  note = {R package version 0.5.3},
+  year = {2024},
+  note = {R package version 0.5.6},
   url = {https://wilkelab.org/ggridges/},
 }
 
 @Manual{R-gt,
   title = {gt: Easily Create Presentation-Ready Display Tables},
-  author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes},
-  year = {2022},
-  note = {R package version 0.7.0},
-  url = {https://CRAN.R-project.org/package=gt},
+  author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and Alexandra Lauer and JooYoung Seo},
+  year = {2023},
+  note = {R package version 0.10.0},
+  url = {https://gt.rstudio.com},
+}
+
+@Manual{R-htmlwidgets,
+  title = {htmlwidgets: HTML Widgets for R},
+  author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Carson Sievert and Kenton Russell},
+  year = {2023},
+  note = {R package version 1.6.2},
+  url = {https://github.com/ramnathv/htmlwidgets},
 }
 
 @Manual{R-jsonlite,
   title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
   author = {Jeroen Ooms},
-  year = {2022},
-  note = {R package version 1.8.2},
-  url = {https://CRAN.R-project.org/package=jsonlite},
+  year = {2023},
+  note = {R package version 1.8.7},
+  url = {https://jeroen.r-universe.dev/jsonlite
+https://arxiv.org/abs/1403.2805},
 }
 
 @Manual{R-kableExtra,
@@ -100,15 +119,48 @@
   author = {Hao Zhu},
   year = {2021},
   note = {R package version 1.3.4},
-  url = {https://CRAN.R-project.org/package=kableExtra},
+  url = {http://haozhu233.github.io/kableExtra/},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.45},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-leaflet,
+  title = {leaflet: Create Interactive Web Maps with the JavaScript Leaflet
+Library},
+  author = {Joe Cheng and Barret Schloerke and Bhaskar Karambelkar and Yihui Xie},
+  year = {2024},
+  note = {R package version 2.2.2},
+  url = {https://rstudio.github.io/leaflet/},
+}
+
+@Manual{R-leaflet.extras,
+  title = {leaflet.extras: Extra Functionality for leaflet Package},
+  author = {Bhaskar Karambelkar and Barret Schloerke},
+  year = {2018},
+  note = {R package version 1.0.0},
+  url = {https://github.com/bhaskarvk/leaflet.extras},
+}
+
+@Manual{R-leaflet.providers,
+  title = {leaflet.providers: Leaflet Providers},
+  author = {Leslie Huang},
+  year = {2023},
+  note = {R package version 2.0.0},
+  url = {https://rstudio.github.io/leaflet.providers/},
+}
+
+@Manual{R-lubridate,
+  title = {lubridate: Make Dealing with Dates a Little Easier},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.9.3},
+  url = {https://lubridate.tidyverse.org},
 }
 
 @Manual{R-magrittr,
@@ -116,121 +168,100 @@
   author = {Stefan Milton Bache and Hadley Wickham},
   year = {2022},
   note = {R package version 2.0.3},
-  url = {https://CRAN.R-project.org/package=magrittr},
+  url = {https://magrittr.tidyverse.org},
+}
+
+@Manual{R-mapview,
+  title = {mapview: Interactive Viewing of Spatial Data in R},
+  author = {Tim Appelhans and Florian Detsch and Christoph Reudenbach and Stefan Woellauer},
+  year = {2022},
+  note = {R package version 2.11.0},
+  url = {https://github.com/r-spatial/mapview},
 }
 
 @Manual{R-openxlsx,
   title = {openxlsx: Read, Write and Edit xlsx Files},
   author = {Philipp Schauberger and Alexander Walker},
-  year = {2021},
-  note = {R package version 4.2.5},
-  url = {https://CRAN.R-project.org/package=openxlsx},
+  year = {2023},
+  note = {R package version 4.2.5.2},
+  url = {https://ycphs.github.io/openxlsx/index.html},
 }
 
-@Manual{R-p2distance,
-  title = {p2distance: Welfare's Synthetic Indicator},
-  author = {A.J. Perez-Luque; R. Moreno; R. Perez-Perez and F.J. Bonet},
-  year = {2012},
-  note = {R package version 1.0.1},
-  url = {https://CRAN.R-project.org/package=p2distance},
-}
 
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
   author = {William Revelle},
-  year = {2022},
-  note = {R package version 2.2.5},
+  year = {2023},
+  note = {R package version 2.3.9},
   url = {https://personality-project.org/r/psych/
 https://personality-project.org/r/psych-manual.pdf},
 }
 
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2020},
-  note = {R package version 0.3.4},
-  url = {https://CRAN.R-project.org/package=purrr},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2023},
+  note = {R package version 1.0.1},
+  url = {https://purrr.tidyverse.org/},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 2.1.2},
-  url = {https://CRAN.R-project.org/package=readr},
+  year = {2023},
+  note = {R package version 2.1.4},
+  url = {https://readr.tidyverse.org},
 }
 
 @Manual{R-readxl,
   title = {readxl: Read Excel Files},
   author = {Hadley Wickham and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 1.4.1},
-  url = {https://CRAN.R-project.org/package=readxl},
+  year = {2023},
+  note = {R package version 1.4.3},
+  url = {https://readxl.tidyverse.org},
 }
 
 @Manual{R-rgdal,
   title = {rgdal: Bindings for the Geospatial Data Abstraction Library},
   author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
-  year = {2022},
-  note = {R package version 1.5-32},
-  url = {https://CRAN.R-project.org/package=rgdal},
+  year = {2023},
+  note = {R package version 1.6-7},
+  url = {http://rgdal.r-forge.r-project.org},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2023},
-  note = {R package version 2.20},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
-}
-
-@Manual{R-sf,
-  title = {sf: Simple Features for R},
-  author = {Edzer Pebesma},
-  year = {2022},
-  note = {R package version 1.0-8},
-  url = {https://CRAN.R-project.org/package=sf},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2024},
+  note = {R package version 2.27},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Manual{R-showtext,
   title = {showtext: Using Fonts More Easily in R Graphs},
   author = {Yixuan Qiu and authors/contributors of the included software. See file AUTHORS for details.},
-  year = {2022},
-  note = {R package version 0.9-5},
+  year = {2023},
+  note = {R package version 0.9-6},
   url = {https://github.com/yixuan/showtext},
 }
 
-@Manual{R-showtextdb,
-  title = {showtextdb: Font Files for the showtext Package},
-  author = {Yixuan Qiu and authors/contributors of the included fonts. See file AUTHORS for details.},
-  year = {2020},
-  note = {R package version 3.0},
-  url = {https://CRAN.R-project.org/package=showtextdb},
-}
 
 @Manual{R-sp,
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
-  year = {2022},
-  note = {R package version 1.5-0},
-  url = {https://CRAN.R-project.org/package=sp},
+  year = {2023},
+  note = {R package version 2.1-0},
+  url = {https://github.com/edzer/sp/},
 }
 
-@Manual{R-stratification,
-  title = {stratification: Univariate Stratification of Survey Populations},
-  author = {Louis-Paul Rivest and Sophie Baillargeon},
-  year = {2022},
-  note = {R package version 2.2-7},
-  url = {https://CRAN.R-project.org/package=stratification},
-}
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
   year = {2022},
   note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=stringr},
+  url = {https://stringr.tidyverse.org},
 }
 
 @Manual{R-sysfonts,
@@ -244,25 +275,25 @@ https://personality-project.org/r/psych-manual.pdf},
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2022},
-  note = {R package version 3.1.7},
-  url = {https://CRAN.R-project.org/package=tibble},
+  year = {2023},
+  note = {R package version 3.2.1},
+  url = {https://tibble.tidyverse.org/},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Maximilian Girlich},
-  year = {2022},
-  note = {R package version 1.2.0},
-  url = {https://CRAN.R-project.org/package=tidyr},
+  author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+  year = {2023},
+  note = {R package version 1.3.0},
+  url = {https://tidyr.tidyverse.org},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2022},
-  note = {R package version 1.3.2},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+  year = {2023},
+  note = {R package version 2.0.0},
+  url = {https://tidyverse.tidyverse.org},
 }
 
 @Book{bookdown2016,
@@ -271,7 +302,7 @@ https://personality-project.org/r/psych-manual.pdf},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2016},
-  note = {ISBN 978-1138700109},
+  isbn = {978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
 }
 
@@ -321,13 +352,24 @@ https://personality-project.org/r/psych-manual.pdf},
   note = {ISBN 978-1466561595},
 }
 
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
+}
+
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
   author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -337,24 +379,12 @@ https://personality-project.org/r/psych-manual.pdf},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
-@Article{sf2018,
-  author = {Edzer Pebesma},
-  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
-  year = {2018},
-  journal = {{The R Journal}},
-  doi = {10.32614/RJ-2018-009},
-  url = {https://doi.org/10.32614/RJ-2018-009},
-  pages = {439--446},
-  volume = {10},
-  number = {1},
-}
-
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger S. Bivand},
+  author = {Edzer J. Pebesma and Roger Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
