Índice de marginación por colonia (Bookdown)

--- a/08-Resumen.Rmd
+++ b/08-Resumen.Rmd
@@ -36,21 +36,17 @@ tabla %>%
          as_raw_html() 
 ```
 
-
+La estimación del índice de marginación por colonia señala que poco más de seis millones de personas habitan colonias urbanas con grado de marginación muy alto, y 13.5 millones se asientan en colonias con alta marginación; en conjunto, suman 19.7 millones de personas que representan casi 21 por ciento de la población estudiada. En el otro extremo, una de cada tres personas vive en colonias urbanas con baja marginación y 16 de cada cien en asentamientos con muy baja marginación. Estos últimos grados de marginación representan casi la mitad tanto de colonias urbanas como de población, la cual asciende a casi 47 millones de personas. En tanto, las colonias con grado medio son el segundo grupo con la mayor cantidad absoluta de colonias urbanas y población, en lo primero representan una de cada cuatro colonias, y en lo segundo son 30 de cada cien personas, cuyo monto de población es de poco más de 29 millones de personas.   
 
 ## Mapa a nivel colonia {-}
 
+**Zona metropolitana del Valle de México**     
 
 ```{r, echo=FALSE, out.width='100%', warning=FALSE, message=FALSE, eval = FALSE}
 p <- readRDS(file = paste0(here::here(),"/Output/Mapa.rds"))
 p
 ```
 
+## Mapa dinámico de colonias {-}
 
-## Comparación en el tiempo {-}
 
-<div style="height:500px;">
-```{r, echo=FALSE, out.width='100%', eval = FALSE}
-readRDS(paste0(here::here(), "/Output/Mapas_2010-2020.rds"))
-```
-</div> 
