--- a/index.Rmd
+++ b/index.Rmd
@@ -48,7 +48,7 @@ knitr::include_graphics(paste0(here::here(), "/img/Map_2020.png"))
 **Índice de marginación a nivel estatal** [Bookdown](https://dvillasanao.github.io/IME_2010_2020/)   
 **Índice de marginación a nivel municipal** [Bookdown](https://dvillasanao.github.io/IMM_2010-2020/)   
 **Índice de marginación a nivel localidad** [Bookdown](https://dvillasanao.github.io/IML_2010_2020/)   
-**Índice de marginación a nivel AGEB** [Bookdown](https://dvillasanao.github.io/IML_2010-2020/)   
+**Índice de marginación a nivel AGEB** [Bookdown](https://dvillasanao.github.io/IMU_2010-2020/)   
 **Índice de marginación a nivel Colonia** [Bookdown](https://dvillasanao.github.io/IMC_2020/)     
 
 ```{r, include=FALSE}
